Minor bug fixes and improvements

--- a/chatui/index.html
+++ b/chatui/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="/marked-github.css" />
-    <title>React App</title>
+    <title>AgentUI</title>
   </head>
   <body>
     <div id="root"></div>
